...
        } finally {
            setIsSaving(false);
        }
    };

    return (
        <View style={Styles.mainContainer} testID="profile-complete-athlete-details-screen">
            <SizeBox height={insets.top} />

            <View style={Styles.header}>
                <TouchableOpacity
                    style={Styles.headerButton}
                    onPress={() => {
...
                </TouchableOpacity>

                <TouchableOpacity
                    style={Styles.nextButton}
                    onPress={onSave}
                    disabled={isSaving}
                    testID={isReviewing ? 'profile-athlete-save-button' : 'profile-athlete-review-button'}
                >
                    {isSaving ? (
                        <ActivityIndicator size="small" color={colors.pureWhite} />
                    ) : (
                        <>
                            <Text style={Styles.nextButtonText}>{isReviewing ? t('Save') : t('Review')}</Text>
...
